fix mat-dialog-actions wrong color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -166,7 +166,6 @@ mat-dialog-actions.mat-dialog-actions {
   justify-content: flex-end;
   padding: 8px 4px;
   margin-right: -24px;
-  color: rgba(0, 0, 0, .87);
 }
 mat-dialog-actions.mat-dialog-actions button {
   margin: 0 4px;
